gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-extern_prelude.rs
can-only-test-this-in-run-make-fulldeps // { dg-error "" "" { target *-*-* } }

